blockquote before alignment fix

--- a/assets/lab.css
+++ b/assets/lab.css
@@ -139,7 +139,7 @@ blockquote::before {
   content: '"';
   font-size: 200%;
   position: absolute;
-  left: 25px;
+  margin-left: -30px;
   margin-top: -6px;
 }
 
